--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.10"
 rdflib = "^7.0.0"
 transformers = "^4.41.2"
 pandas = "^2.2.2"
+faiss-cpu = "^1.8.0"
+torch = "^2.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
