--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ version = "0.1.0"
 
 [tool.poetry.dependencies]
 faiss-cpu = "^1.8.0"
+flask = "^3.0.3"
+flask-compress = "^1.15"
+flask-cors = "^4.0.1"
+flask-restful = "^0.3.10"
 numpy = "^1.26.4"
 pandas = "^2.2.2"
 python = "^3.10"
@@ -19,6 +23,7 @@ rdflib = "^7.0.0"
 spacy = {extras = ["cudaautodetect"], version = "^3.7.5"}
 torch = "^2.3.1"
 transformers = "^4.41.2"
+waitress = "^3.0.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
