--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,12 @@ flask = "^3.0.3"
 flask-compress = "^1.15"
 flask-cors = "^4.0.1"
 flask-restful = "^0.3.10"
+gapstatistics = "^0.1.5"
 numpy = "^1.26.4"
 pandas = "^2.2.2"
 python = "^3.10"
 rdflib = "^7.0.0"
+sentence-transformers = "^3.0.1"
 spacy = {extras = ["cudaautodetect"], version = "^3.7.5"}
 torch = "^2.3.1"
 transformers = "^4.41.2"
