--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-faiss-cpu = "^1.8.0"
+faiss-cpu = "1.8.0"
 flask = "^3.0.3"
 flask-compress = "^1.15"
 flask-cors = "^4.0.1"
@@ -22,7 +22,7 @@ pandas = "^2.2.2"
 python = "^3.10"
 rdflib = "^7.0.0"
 sentence-transformers = "^3.0.1"
-spacy = {extras = ["cudaautodetect"], version = "^3.7.5"}
+spacy = {extras = ["cpu"], version = "^3.7.5"}
 torch = "^2.3.1"
 transformers = "^4.41.2"
 waitress = "^3.0.0"
