--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Alexander Belikov <abelikov@gmail.com>"]
 description = "bio / sci property entity linker"
 license = "BSD 3"
 name = "pelinker"
+packages = [{include = "pelinker"}]
 readme = "README.md"
 version = "0.1.0"
 
