--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ waitress = "^3.0.0"
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
 networkx = "^3.3"
+pre-commit = "^4.0.1"
 pylint = "^3.2.3"
 pytest = "^8.2.2"
 scikit-learn = "^1.5.0"
