--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,15 @@ flask-restful = "^0.3.10"
 joblib = "^1.4.2"
 numpy = "^1.26.4"
 pandas = "^2.2.2"
+plotly = "^6.2.0"
+pyarrow = "^20.0.0"
 python = "^3.10"
 rdflib = "^7.0.0"
 sentence-transformers = "^3.0.1"
 spacy = {extras = ["cpu"], version = "^3.7.5"}
 torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}
 transformers = "^4.41.2"
+umap-learn = "^0.5.9.post2"
 waitress = "^3.0.2"
 
 [tool.poetry.group.dev.dependencies]
