--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
 description = "bio / sci property entity linker"
 name = "pelinker"
 readme = "README.md"
-requires-python = "~=3.10"
+requires-python = ">=3.10.6"
 version = "0.1.3"
 
 [tool.hatch.build.targets.sdist]
