--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,51 @@
 [build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core"]
+build-backend = "hatchling.build"
+requires = ["hatchling"]
 
-[tool.poetry]
-authors = ["Alexander Belikov <abelikov@gmail.com>"]
+[dependency-groups]
+dev = [
+  "jupyter>=1.0.0,<2",
+  "pre-commit>=4.0.1,<5",
+  "pylint>=3.2.3,<4",
+  "pytest>=8.2.2,<9",
+  "scikit-learn>=1.5.0,<2",
+  "seaborn>=0.13.2,<0.14"
+]
+
+[project]
+authors = [{email = "abelikov@gmail.com", name = "Alexander Belikov"}]
+dependencies = [
+  "dataclass-wizard>=0.35.1,<0.36",
+  "faiss-cpu==1.8.0",
+  "flask-compress~=1.15",
+  "flask-cors>=4.0.1,<5",
+  "flask-restful>=0.3.10,<0.4",
+  "flask>=3.0.3,<4",
+  "joblib>=1.4.2,<2",
+  "numpy>=1.26.4,<2",
+  "pandas>=2.2.2,<3",
+  "plotly>=6.2.0,<7",
+  "pyarrow>=20.0.0,<21",
+  "rdflib>=7.0.0,<8",
+  "rich>=14.1.0",
+  "scikit-optimize>=0.10.2",
+  "sentence-transformers>=3.0.1,<4",
+  "spacy>=3.7.5,<4",
+  "torch",
+  "transformers>=4.41.2,<5",
+  "umap-learn>=0.5.9.post2,<0.6",
+  "waitress>=3.0.2,<4"
+]
 description = "bio / sci property entity linker"
-license = "BSD 3"
 name = "pelinker"
-packages = [{include = "pelinker"}]
 readme = "README.md"
+requires-python = ">=3.10.6"
 version = "0.1.3"
 
-[tool.poetry.dependencies]
-faiss-cpu = "1.8.0"
-flask = "^3.0.3"
-flask-compress = "^1.15"
-flask-cors = "^4.0.1"
-flask-restful = "^0.3.10"
-joblib = "^1.4.2"
-numpy = "^1.26.4"
-pandas = "^2.2.2"
-python = "^3.10"
-rdflib = "^7.0.0"
-sentence-transformers = "^3.0.1"
-spacy = {extras = ["cpu"], version = "^3.7.5"}
-torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}
-transformers = "^4.41.2"
-waitress = "^3.0.0"
+[tool.hatch.build.targets.sdist]
+include = ["pelinker"]
 
-[tool.poetry.group.dev.dependencies]
-jupyter = "^1.0.0"
-networkx = "^3.3"
-pre-commit = "^4.0.1"
-pylint = "^3.2.3"
-pytest = "^8.2.2"
-scikit-learn = "^1.5.0"
-seaborn = "^0.13.2"
+[tool.hatch.build.targets.wheel]
+include = ["pelinker"]
+
+[tool.uv]
